--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
         "jquery": "^3.2",
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
-        "vue": "^2.1.10"
+        "tailwindcss": "^1.1.2",
+        "vue": "^2.6.10"
     },
     "dependencies": {
         "at.js": "^1.5.4",
+        "bootstrap": "^4.3.1",
+        "bootstrap-vue": "^2.0.0-rc.28",
         "jquery.caret": "^0.3.1",
         "moment": "^2.24.0",
         "trix": "^1.1.1",
